Fixing overflow of the linear gradient background

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -114,6 +114,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .offer__image {
